<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin_extra_large"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:contentDescription="@string/app_name"
            android:scaleType="fitCenter"
            android:src="@drawable/logo_color" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_really_large"
            android:gravity="center"
            android:text="@string/forget_password"
            android:textColor="@color/blue"
            android:textSize="@dimen/textsize_normal" />

        <EditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_really_large"
            android:background="@drawable/bg_round_strike_blue"
            android:hint="@string/Email"
            android:inputType="textEmailAddress"
            android:padding="@dimen/margin_normal"
            android:textColor="@color/blue"
            android:textColorHint="@color/text_light" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal">

            <Button
                android:id="@+id/btn_reset"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/margin_large"
                android:layout_weight="1"
                android:background="@drawable/bg_btn_blue"
                android:text="@string/Reset"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/bg_btn_blue"
                android:text="@string/Back"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:alpha="0.2"
        android:src="@drawable/splash_logo" />
</RelativeLayout>