<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.tech.oscar.youthleap.ui.view.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingBottom="@dimen/margin_really_large"
            android:paddingLeft="@dimen/margin_large"
            android:paddingRight="@dimen/margin_large"
            android:paddingTop="?attr/actionBarSize">

            <com.tech.oscar.youthleap.ui.view.MyAvatarImageView
                android:id="@+id/img_avatar"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="@dimen/margin_large" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_normal"
                android:gravity="center_vertical">

                <CheckBox
                    android:id="@+id/chk_remeber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/bg_chk_blue"
                    android:text="@string/remember_me"
                    android:textColor="@color/text_normal"
                    android:textSize="@dimen/textsize_normal" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/btn_change_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginLeft="@dimen/margin_normal"
                    android:background="@drawable/bg_btn_blue"
                    android:paddingBottom="@dimen/margin_normal"
                    android:paddingLeft="@dimen/margin_large"
                    android:paddingRight="@dimen/margin_large"
                    android:paddingTop="@dimen/margin_normal"
                    android:text="@string/Change_Password"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/textsize_large" />

            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_school_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_normal"
                app:errorEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/School_name"
                    android:inputType="textCapWords" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_birthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edt_birthday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/date_birth"
                    android:inputType="textCapWords" />

            </android.support.design.widget.TextInputLayout>

            <RadioGroup
                android:id="@+id/radgrp_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_round_strike_blue"
                android:orientation="horizontal"
                android:padding="@dimen/margin_small">

                <RadioButton
                    android:id="@+id/rad_male"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/gender_male"
                    android:textColor="@color/text_normal"
                    android:textSize="@dimen/textsize_normal" />

                <RadioButton
                    android:id="@+id/rad_female"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/gender_female"
                    android:textColor="@color/text_normal"
                    android:textSize="@dimen/textsize_normal" />
            </RadioGroup>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_normal"
                app:errorEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Mobile"
                    android:inputType="phone" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Email"
                    android:inputType="textEmailAddress" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/State"
                    android:inputType="textCapCharacters" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/City"
                    android:inputType="textCapCharacters" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Address"
                    android:inputType="textCapCharacters" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>
    </com.tech.oscar.youthleap.ui.view.NestedScrollView>

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="@style/ActionBarTheme"
            app:layout_scrollFlags="scroll|enterAlways" />
    </android.support.design.widget.AppBarLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="@dimen/margin_large"
        android:src="@drawable/ic_action_save"
        app:borderWidth="0dp"
        app:layout_behavior="com.tech.oscar.youthleap.adapter.ScrollingFABBehavior" />

</android.support.design.widget.CoordinatorLayout>
